dev: Added networks + Working version of Theoros (#74)
* dev(more_networks):

* dev(more_networks):

* dev(more_networks):

* dev(more_networks): lint :)

* dev(more_networks):

* dev(more_networks):

* dev(more_networks):

* dev(more_networks):

* dev(more_networks): Working
!

* dev(more_networks): lint

* dev(more_networks): ethers -> alloy

* dev(more_networks): Moving RPC stuff

* dev(more_networks): Evm COnfig

* dev(more_networks):

* dev(more_networks):

* dev(more_networks):

* dev(more_networks): Fixed comments

* dev(more_networks):

* dev(more_networks): store directly validators instead of client

* dev(more_networks):

* Update cairo-test.yml

---------
