# rust/theoros/src/handlers/mod.rs
@@ -1,3 +1,4 @@
 pub mod get_calldata;
+pub mod get_chains;
 pub mod get_data_feeds;
 pub mod subscribe_to_calldata;
